[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Antonio Volgarino <burningham18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.8"
pandas = "^2.0.1"
streamlit = "^1.22.0"
bcrypt = "^4.0.1"
plotly = "^5.14.1"
pathlib = "^1.0.1"
streamlit-extras = "^0.2.7"
cryptography = "^40.0.2"
openpyxl = "^3.1.2"
pymongo = "3.11"
dnspython = "^2.3.0"
mongoose = "^0.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
